# midnite

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  pyproject.toml  setup.py
.circleci/: config.yml
docker/: Dockerfile
docs/: mkdocs.yml
notebooks/: Compound Visualization.html  Compound Visualization.ipynb  Compound Visualization.py  Details - Gradient Attribution.html  Details - Gradient Attribution.ipynb  Details - Gradient Attribution.py  Details - Max Mean Activation.html  Details - Max Mean Activation.ipynb  Details - Max Mean Activation.py  Details - Occlusion.html  Details - Occlusion.ipynb  Details - Occlusion.py  Monte-Carlo Uncertainty.html  Monte-Carlo Uncertainty.ipynb  Monte-Carlo Uncertainty.py  Uncertainty Tutorial 1 - Image Classification Example with AlexNet.html  Uncertainty Tutorial 1 - Image Classification Example with AlexNet.ipynb  Uncertainty Tutorial 1 - Image Classification Example with AlexNet.py  Uncertainty Tutorial 2 - Image Segmentation Example using FCN32.html  Uncertainty Tutorial 2 - Image Segmentation Example using FCN32.ipynb  Uncertainty Tutorial 2 - Image Segmentation Example using FCN32.py  Uncertainty Visualization.html  Uncertainty Visualization.ipynb  Uncertainty Visualization.py  Untitled.html  Untitled.ipynb  Untitled.py  Visualization Building Blocks.html  Visualization Building Blocks.ipynb  Visualization Building Blocks.py  Visualization Tutorial 1 - Grad CAM.html  Visualization Tutorial 1 - Grad CAM.ipynb  Visualization Tutorial 1 - Grad CAM.py  Visualization Tutorial 1 - Gradient Class Activation Mapping with botton layer split in ResNet.html  (+19 more)
src/: data_utils.py  model_utils.py  plot_utils.py  train.py
(+90 files in other folders)
