[tool.poetry]
name = "interpretability_framework"
version = "0.1.0"
description = "This is a framework for visualization and uncertainty in CNNs."
authors = ["Christina Aigner <christina@luminovo.ai >, Fabian Huch <fabian@luminovo.ai >"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.0"
numpy = "^1.16"
pytest-mock = "^1.10"
torchvision = "^0.2.2"
assertpy = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^3.8"
gdown = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
