[tool.poetry]
name = "midnite"
version = "0.1.0"
description = "This is a framework for visualization and uncertainty in CNNs."
authors = ["Christina Aigner <christina@luminovo.ai >, Fabian Huch <fabian@luminovo.ai >"]

[tool.poetry.dependencies]
python = "^3.6"
torch = "=1.1.0"
numpy = "^1.16"
pillow = "^5.4"
opencv-python = "^4.0"
tqdm = "^4.31"

[tool.poetry.dev-dependencies]
pytest = "^3.8"
gdown = "^3.7"
jupyter = "^1.0"
matplotlib = "^3.0"
assertpy = "^0.14.0"
pytest-mock = "^1.10"
torchvision = "^0.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
